tests/negative/parse-error.hs
-- EXPECT-ERROR: Parse error
import ReWire
f = = 5
main = undefined
